crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_snooze_modal_styles.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: style
---
0 0..37 Reset Reset BOLD
0 39..49 Reset Reset DIM
1 0..28 Cyan Reset -
2 0..1 Cyan Reset -
2 1..6 Reset Reset BOLD
2 27..28 Cyan Reset -
2 28..32 Reset Reset BOLD
3 0..1 Cyan Reset -
3 27..28 Cyan Reset -
3 28..36 Reset Reset DIM
4 0..1 Cyan Reset -
4 9..11 Green Reset -
4 12..14 Red Reset -
4 27..28 Cyan Reset -
4 36..38 Green Reset -
4 39..41 Red Reset -
4 41..53 Reset Reset DIM
5 0..1 Cyan Reset -
5 9..11 Green Reset -
5 12..14 Red Reset -
5 27..28 Cyan Reset -
5 36..38 Green Reset -
5 39..41 Red Reset -
5 41..50 Reset Reset DIM
6 0..1 Cyan Reset -
6 15..18 Green Reset -
6 19..21 Red Reset -
6 27..28 Cyan Reset -
7 0..1 Cyan Reset -
7 1..27 Reset Reset DIM
7 27..28 Cyan Reset -
8 0..1 Cyan Reset -
8 1..5 Reset Reset BOLD|REVERSED
8 5..27 Reset Reset REVERSED
8 27..28 Cyan Reset -
9 0..1 Cyan Reset -
9 27..28 Cyan Reset -
10 0..1 Cyan Reset -
10 9..11 Green Reset -
10 12..14 Red Reset -
10 14..26 Reset Reset DIM
10 27..28 Cyan Reset -
11 0..1 Cyan Reset -
11 9..11 Green Reset -
11 12..14 Red Reset -
11 14..23 Reset Reset DIM
11 27..28 Cyan Reset -
12 0..1 Cyan Reset -
12 27..28 Cyan Reset -
12 30..69 Cyan Reset -
13 0..1 Cyan Reset -
13 1..27 Reset Reset DIM
13 27..28 Cyan Reset -
13 30..31 Cyan Reset -
13 32..60 Reset Reset BOLD
13 68..69 Cyan Reset -
14 0..1 Cyan Reset -
14 1..8 Reset Reset BOLD
14 27..28 Cyan Reset -
14 30..31 Cyan Reset -
14 68..69 Cyan Reset -
15 0..1 Cyan Reset -
15 27..28 Cyan Reset -
15 30..31 Cyan Reset -
15 32..67 Reset Reset DIM
15 68..69 Cyan Reset -
16 0..1 Cyan Reset -
16 12..14 Green Reset -
16 15..17 Red Reset -
16 27..28 Cyan Reset -
16 30..69 Cyan Reset -
17 0..1 Cyan Reset -
17 27..28 Cyan Reset -
18 0..1 Cyan Reset -
18 27..28 Cyan Reset -
19 0..1 Cyan Reset -
19 27..28 Cyan Reset -
20 0..1 Cyan Reset -
20 27..28 Cyan Reset -
21 0..1 Cyan Reset -
21 27..28 Cyan Reset -
22 0..1 Cyan Reset -
22 27..28 Cyan Reset -
23 0..1 Cyan Reset -
23 27..28 Cyan Reset -
24 0..1 Cyan Reset -
24 27..28 Cyan Reset -
25 0..1 Cyan Reset -
25 27..28 Cyan Reset -
26 0..1 Cyan Reset -
26 27..28 Cyan Reset -
27 0..1 Cyan Reset -
27 27..28 Cyan Reset -
28 0..28 Cyan Reset -
29 0..94 Reset Reset DIM
