crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_too_small_30x8_frame.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: frame
---
"too small: 40×10 min          "
"                              "
"                              "
"                              "
"                              "
"                              "
"                              "
"                              "
