crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_tour_depth_80x24_styles.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: style
---
0 0..37 Reset Reset BOLD
0 39..49 Reset Reset DIM
1 0..28 Cyan Reset -
2 0..1 Cyan Reset -
2 1..6 Reset Reset BOLD
2 27..28 Cyan Reset -
2 28..68 Reset Reset DIM
3 0..1 Cyan Reset -
3 27..28 Cyan Reset -
4 0..78 Cyan Reset -
5 0..2 Cyan Reset -
5 3..23 Reset Reset BOLD
5 77..78 Cyan Reset -
6 0..2 Cyan Reset -
6 77..78 Cyan Reset -
7 0..2 Cyan Reset -
7 77..78 Cyan Reset -
8 0..2 Cyan Reset -
8 77..78 Cyan Reset -
9 0..2 Cyan Reset -
9 77..78 Cyan Reset -
10 0..2 Cyan Reset -
10 77..78 Cyan Reset -
11 0..2 Cyan Reset -
11 77..78 Cyan Reset -
12 0..2 Cyan Reset -
12 77..78 Cyan Reset -
13 0..2 Cyan Reset -
13 3..44 Reset Reset DIM
13 77..78 Cyan Reset -
14 0..2 Cyan Reset -
14 77..78 Cyan Reset -
15 0..2 Cyan Reset -
15 3..33 Reset Reset BOLD
15 77..78 Cyan Reset -
16 0..2 Cyan Reset -
16 77..78 Cyan Reset -
17 0..2 Cyan Reset -
17 77..78 Cyan Reset -
18 0..2 Cyan Reset -
18 3..42 Reset Reset DIM
18 77..78 Cyan Reset -
19 0..78 Cyan Reset -
20 0..1 Cyan Reset -
20 27..28 Cyan Reset -
21 0..1 Cyan Reset -
21 27..28 Cyan Reset -
22 0..28 Cyan Reset -
23 0..73 Reset Reset DIM
