crates/lastcall/tests/snapshots/test_e2e_tui_snapshots__tui_tour_empty_80x24_styles.snap
---
source: crates/lastcall/tests/test_e2e_tui_snapshots.rs
expression: style
---
0 0..38 Reset Reset BOLD
0 40..50 Reset Reset DIM
1 0..28 Cyan Reset -
2 0..1 Cyan Reset -
2 1..6 Reset Reset BOLD
2 27..28 Cyan Reset -
2 28..68 Reset Reset DIM
3 0..1 Cyan Reset -
3 27..28 Cyan Reset -
4 0..1 Cyan Reset -
4 9..11 Green Reset -
4 12..14 Red Reset -
4 27..28 Cyan Reset -
5 0..1 Cyan Reset -
5 9..11 Green Reset -
5 12..14 Red Reset -
5 27..28 Cyan Reset -
6 0..1 Cyan Reset -
6 2..77 Cyan Reset -
7 0..1 Cyan Reset -
7 1..2 Reset Reset DIM
7 2..3 Cyan Reset -
7 4..51 Reset Reset BOLD
7 76..77 Cyan Reset -
8 0..1 Cyan Reset -
8 1..2 Reset Reset BOLD
8 2..3 Cyan Reset -
8 76..77 Cyan Reset -
9 0..1 Cyan Reset -
9 2..3 Cyan Reset -
9 76..77 Cyan Reset -
10 0..1 Cyan Reset -
10 2..3 Cyan Reset -
10 76..77 Cyan Reset -
11 0..1 Cyan Reset -
11 2..3 Cyan Reset -
11 76..77 Cyan Reset -
12 0..1 Cyan Reset -
12 2..3 Cyan Reset -
12 4..35 Reset Reset BOLD
12 76..77 Cyan Reset -
13 0..1 Cyan Reset -
13 1..2 Reset Reset DIM
13 2..3 Cyan Reset -
13 76..77 Cyan Reset -
14 0..1 Cyan Reset -
14 1..2 Reset Reset BOLD|DIM
14 2..3 Cyan Reset -
14 76..77 Cyan Reset -
15 0..1 Cyan Reset -
15 1..2 Reset Reset DIM
15 2..3 Cyan Reset -
15 76..77 Cyan Reset -
16 0..1 Cyan Reset -
16 1..2 Reset Reset DIM
16 2..3 Cyan Reset -
16 4..43 Reset Reset DIM
16 76..77 Cyan Reset -
17 0..1 Cyan Reset -
17 1..2 Reset Reset BOLD|DIM
17 2..77 Cyan Reset -
18 0..1 Cyan Reset -
18 1..17 Reset Reset DIM
18 27..28 Cyan Reset -
19 0..1 Cyan Reset -
19 1..27 Reset Reset DIM
19 27..28 Cyan Reset -
20 0..1 Cyan Reset -
20 1..7 Reset Reset BOLD|DIM
20 27..28 Cyan Reset -
21 0..1 Cyan Reset -
21 1..17 Reset Reset DIM
21 27..28 Cyan Reset -
22 0..28 Cyan Reset -
23 0..73 Reset Reset DIM
